--- a/Front-End/public/index.html
+++ b/Front-End/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>Simple React App</title>
   </head>
-  <body>
+  <body style="background-color: darkred">
     <div id="root"></div>
   </body>
 </html>
