Finished splash page

--- a/Front-End/public/index.html
+++ b/Front-End/public/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,600&display=swap" rel="stylesheet">
     <title>Simple React App</title>
   </head>
-  <body style="background-color: darkred">
+  <body style="background-color: darkred;font-family: 'Raleway', sans-serif;">
     <div id="root"></div>
   </body>
 </html>
