--- a/Front-End/public/index.html
+++ b/Front-End/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../src/index.css">
     <title>Simple React App</title>
   </head>
   <body style="background-color: darkred;font-family: 'Raleway', sans-serif;">
