Made the homepage presentable

--- a/Front-End/public/index.html
+++ b/Front-End/public/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel=”shortcut icon” href=”%PUBLIC_URL%/favicon.ico”>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../src/index.css">
-    <title>Simple React App</title>
+    <link rel="stylesheet" href="../src/index2.scss">
+    <title>IMDB Lite</title>
   </head>
   <body style="background-color: darkred;font-family: 'Raleway', sans-serif;">
     <div id="root"></div>
