--- a/Front-End/public/index.html
+++ b/Front-End/public/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <link rel=”shortcut icon” href=”%PUBLIC_URL%/favicon.ico”>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="../src/index.css">
     <link rel="stylesheet" href="../src/index2.scss">
     <title>IMDB Lite</title>
