added meta data into head of index.html

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,6 +9,12 @@
     <link rel="stylesheet" href="../src/index.css">
     <link rel="stylesheet" href="../src/index2.scss">
     <title>IMDB Lite</title>
+    <meta name="description" content="IMDB Lite App" />
+    <meta name="title" property="og:title" content="IMDB Lite" />
+    <meta property="og:type" content="_" />
+    <meta name="image" property="og:image" content="https://imdb-lite-movie-posters.s3.amazonaws.com/imdbLite.png" />
+    <meta name="description" property="og:description" content="IMDB Lite" />
+    <meta name="author" content="Elijah Hubbard" />
   </head>
   <body style="background-color: darkred;font-family: 'Raleway', sans-serif;">
     <div id="root"></div>
