--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -11,7 +11,7 @@
     <title>IMDB Lite</title>
     <meta name="description" content="IMDB Lite App" />
     <meta name="title" property="og:title" content="IMDB Lite" />
-    <meta property="og:type" content="_" />
+    <meta property="og:type" content="Website" />
     <meta name="image" property="og:image" content="https://imdb-lite-movie-posters.s3.amazonaws.com/imdbLite.png" />
     <meta name="description" property="og:description" content="IMDB Lite" />
     <meta name="author" content="Elijah Hubbard" />
